--- a/StonksCasino/StonksCasino/MainWindow.xaml
+++ b/StonksCasino/StonksCasino/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Height="50" Width="100" Content="Bibliotheek" Click="Library_Click"/>
     </Grid>
 </Window>
