Roullete page gemaakt en button naar roulette gemaakt

--- a/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/main/LibraryWindow.xaml
@@ -27,5 +27,8 @@
 
             </StackPanel>
         </Grid>
+        <Grid Grid.Row="2">
+            <Button Height="30" Width="60" Content="Roulette" Click="Roullete_click" />
+        </Grid>
     </Grid>
 </Window>
