--- a/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="StonksCasino.Views.main.LibraryWindow"
+﻿<Window x:Class="StonksCasino.Views.poker.PokerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StonksCasino.Views.main"
+        xmlns:local="clr-namespace:StonksCasino.Views.poker"
         mc:Ignorable="d"
-        Title="LibraryWindow" Height="450" Width="800"   WindowState="Maximized">
+        Title="PokerWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -16,7 +16,6 @@
                 <Button x:Name="btnBibliotheek" Content="Bibliotheek" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
                 <Button x:Name="btnWinkel" Content="Winkel" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
                 <Button x:Name="BtnGeldStorten" Content="Geld storten" FontSize="20" HorizontalAlignment="Left" Background="Transparent" Height="50" Padding="10" VerticalAlignment="Center" Foreground="White" />
-
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Image Source="/Img/Main/Account.png" Margin="5,0" Height="40"></Image>
@@ -24,15 +23,27 @@
                 <Image Source="/Img/Main/streep.png"></Image>
                 <Image Source="/Img/Main/Token.png" Height="40"></Image>
                 <TextBlock Text="{Binding User.MyTokens, Mode=OneWay}" Padding="10" Foreground="White" FontSize="20" VerticalAlignment="Center" />
-
             </StackPanel>
         </Grid>
         <Grid Grid.Row="2">
-            <StackPanel>
-                <Button Height="30" Width="60" Content="Roulette" Click="Roullete_click" />
-                <Button Height="30" Width="60" Content="BlackJack" Click="Blackjack_click"/>
-                <Button Height="30" Width="60" Content="Poker" Click="Poker_click"/>
-            </StackPanel>
+            <Grid.Background>
+                <ImageBrush ImageSource="/Img/Main/background.png" />
+            </Grid.Background>
+            <Grid Margin="20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+                    
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
