--- a/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/Roulette/RouletteWindow.xaml
@@ -6,6 +6,13 @@
         xmlns:local="clr-namespace:StonksCasino.Views.Roulette"
         mc:Ignorable="d"
         Title="RouletteWindow" Height="600" Width="1000">
+    <Window.Resources>
+        <Storyboard x:Key="Storyboard" BeginTime="00:00:00.000" Duration="00:00:10.000">
+            <DoubleAnimation Storyboard.TargetName="imWheel" 
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)" 
+                             From="0" To="360" Duration="00:00:20.000" />
+        </Storyboard>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -43,7 +50,11 @@
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions>
-            <Image Source="/Img/Roulette/Roulette.png" Grid.Row="1" Grid.Column="1"></Image>
+            <Image  x:Name="imWheel" Source="/Img/Roulette/roulettetafel1.png"  Grid.Row="1" Grid.Column="1" RenderTransformOrigin="0.5,0.5" >
+                <Image.RenderTransform>
+                    <RotateTransform Angle="0" />
+                </Image.RenderTransform>
+            </Image>
             <Grid Grid.Row="1" Grid.Column="3">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="3*"/>
@@ -61,7 +72,7 @@
 
                 <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
                     <Button x:Name="BtnStatistics" Background="ForestGreen" Foreground="White" BorderBrush="LightGreen" Width="100" Height="80">Statestieken</Button>
-                    <Button x:Name="BtnPlay" Background="ForestGreen" Margin="10,0,0,0" Foreground="White" BorderBrush="LightGreen" Width="100" Height="80" >Speel!</Button>
+                    <Button x:Name="BtnPlay" Background="ForestGreen" Margin="10,0,0,0" Foreground="White" BorderBrush="LightGreen" Width="100" Height="80" Click="BtnPlay_Click" >Speel!</Button>
                 </StackPanel>
                 <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center"/>
                 <Grid Grid.Row="2" x:Name="gridgetallen">
@@ -399,13 +410,17 @@
                         <RowDefinition Height="0.2*"/>
                         <RowDefinition Height="0.2*"/>
                     </Grid.RowDefinitions>
+                    
+                    <Image Opacity="{Binding MyBettingTable.Bets[0].Opacity }" Source="{Binding MyBettingTable.Bets[0].ImageUrl}" Grid.Column="5" Grid.Row="22" Grid.ColumnSpan="5" Grid.RowSpan="10"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[0].AmountLabel}" Foreground="White"  Grid.Column="5" Grid.Row="22" Grid.ColumnSpan="5" Grid.RowSpan="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button Tag="{Binding MyBettingTable.Bets[0]}" MouseRightButtonUp="Button_MouseRightButtonUp"  Grid.Column="5" Grid.Row="23" Grid.RowSpan="9" Grid.ColumnSpan="4" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
 
-                    <Image x:Name="btn3" Visibility="Hidden" Grid.Column="5" Grid.ColumnSpan="5"  Grid.RowSpan="10" Source="/Img/Roulette/token.png"/>
-                    <Image  x:Name="btn3625" Visibility="Hidden"  Grid.Column="8" Grid.Row="6" Grid.ColumnSpan="5" Grid.RowSpan="9" Source="/Img/Roulette/token.png"/>
-                    <Button Grid.Column="5"  Content="btn3" Foreground="Transparent" Grid.RowSpan="9" Grid.ColumnSpan="4" Background="Transparent" BorderBrush="Transparent"   ></Button>
-                    <Button Grid.Column="9" Content="btn3" Foreground="Transparent"  Grid.RowSpan="3" Grid.ColumnSpan="3" Grid.Row="9" Background="Transparent" BorderBrush="Transparent"  ></Button>
+                    <Image Opacity="{Binding MyBettingTable.Bets[1].Opacity }" Source="{Binding MyBettingTable.Bets[1].ImageUrl}" Grid.Column="5" Grid.Row="19" Grid.ColumnSpan="5" Grid.RowSpan="5"/>
+                    <TextBlock Text="{Binding MyBettingTable.Bets[1].AmountLabel}" Foreground="White"  Grid.Column="5" Grid.Row="19" Grid.ColumnSpan="5" Grid.RowSpan="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button Tag="{Binding MyBettingTable.Bets[1]}" MouseRightButtonUp="Button_MouseRightButtonUp" Grid.Column="5" Grid.Row="20" Grid.RowSpan="3" Grid.ColumnSpan="4" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Click="Button_Click" Background="Transparent" Style="{DynamicResource Buttonstyleinzet}"/>
 
 
+                    
 
                 </Grid>
 
